--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,25 +1,13 @@
 
 // Do not edit directly
-// Generated on Mon, 25 Jan 2021 07:28:33 GMT
+// Generated on Mon, 25 Jan 2021 08:55:01 GMT
 
-$light-color-primary-lighter: 400;
-$light-color-primary-default: 500;
-$light-color-primary-darker: 600;
-$light-color-second-lighter: 100;
-$light-color-second-default: 300;
-$light-color-second-darker: 400;
-$light-color-error-lighter: 60;
-$light-color-error-default: 400;
-$light-color-error-darker: 500;
-$light-color-info-lighter: 60;
-$light-color-info-default: 200;
-$light-color-info-darker: 400;
-$light-color-success-lighter: 60;
-$light-color-success-default: 200;
-$light-color-success-darker: 400;
-$light-color-warning-lighter: 60;
-$light-color-warning-default: 200;
-$light-color-warning-darker: 400;
+$light-color-primary-default: #338FCC;
+$light-color-second-default: #B3B3B3;
+$light-color-error-default: #E76E5C;
+$light-color-info-default: #AAD1EC;
+$light-color-success-default: #B4DEA4;
+$light-color-warning-default: #F0D49B;
 $light-color-foreground-text: #4D4D4D;
 $light-color-foreground-text-less-contrast: #999999;
 $light-color-foreground-text-disabled: #B3B3B3;
@@ -35,24 +23,12 @@ $light-color-states-focused-color: #338FCC;
 $light-color-states-selected-color: #D8EAF7;
 $light-color-states-pressed-shadow: inset 0 1px 2px 0 rgba(black, 0.2);
 $light-color-states-disabled-opacity: 0.3;
-$dark-color-primary-lighter: 300;
-$dark-color-primary-default: 400;
-$dark-color-primary-darker: 500;
-$dark-color-second-lighter: 200;
-$dark-color-second-default: 400;
-$dark-color-second-darker: 700;
-$dark-color-error-lighter: 200;
-$dark-color-error-default: 400;
-$dark-color-error-darker: 700;
-$dark-color-info-lighter: 200;
-$dark-color-info-default: 400;
-$dark-color-info-darker: 700;
-$dark-color-success-lighter: 200;
-$dark-color-success-default: 400;
-$dark-color-success-darker: 700;
-$dark-color-warning-lighter: 200;
-$dark-color-warning-default: 400;
-$dark-color-warning-darker: 700;
+$dark-color-primary-default: #57A4D7;
+$dark-color-second-default: #999999;
+$dark-color-error-default: #E76E5C;
+$dark-color-info-default: #57A4D7;
+$dark-color-success-default: #6FBA53;
+$dark-color-warning-default: #DFA739;
 $dark-color-foreground-text: #F0F0F0;
 $dark-color-foreground-text-less-contrast: #999999;
 $dark-color-foreground-text-disabled: #999999;
@@ -291,6 +267,36 @@ $typography-extra-small-text-letter-spacing: 0.22px;
 $typography-extra-small-text-font-weight: normal;
 $typography-extra-small-text-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
 $typography-extra-small-text-text-transform: null;
+$alert-light-color-error-background: #F4B7AE;
+$alert-light-color-error-border: #E76E5C;
+$alert-light-color-error-icon: #E76E5C;
+$alert-light-color-warning-background: #F0D49B;
+$alert-light-color-warning-border: #F0D49B;
+$alert-light-color-warning-icon: #F0D49B;
+$alert-light-color-success-background: #B4DEA4;
+$alert-light-color-success-border: #B4DEA4;
+$alert-light-color-success-icon: #B4DEA4;
+$alert-light-color-info-background: #AAD1EC;
+$alert-light-color-info-border: #AAD1EC;
+$alert-light-color-info-icon: #AAD1EC;
+$alert-light-color-default-background: #CCCCCC;
+$alert-light-color-default-border: #B3B3B3;
+$alert-light-color-default-icon: #CCCCCC;
+$alert-dark-color-error-background: #832112;
+$alert-dark-color-error-border: #832112;
+$alert-dark-color-error-icon: #E76E5C;
+$alert-dark-color-warning-background: #7D5504;
+$alert-dark-color-warning-border: #7D5504;
+$alert-dark-color-warning-icon: #DFA739;
+$alert-dark-color-success-background: #276211;
+$alert-dark-color-success-border: #276211;
+$alert-dark-color-success-icon: #6FBA53;
+$alert-dark-color-info-background: #114E77;
+$alert-dark-color-info-border: #114E77;
+$alert-dark-color-info-icon: #57A4D7;
+$alert-dark-color-default-background: #4D4D4D;
+$alert-dark-color-default-border: #4D4D4D;
+$alert-dark-color-default-icon: #999999;
 $alert-size-padding: 13px 15px;
 $alert-size-padding-small: 11px 15px;
 $alert-size-right-padding-dismissible: 15px;
