--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Mon, 25 Jan 2021 08:55:01 GMT
+// Generated on Mon, 25 Jan 2021 11:58:46 GMT
 
 $light-color-primary-default: #338FCC;
 $light-color-second-default: #B3B3B3;
@@ -357,6 +357,31 @@ $icon-button-size-border-radius: 3px;
 $icon-button-size-padding: 5px 7px;
 $icon-button-size-text-padding: 5px 7px;
 $icon-button-size-icon-padding: 5px 15px;
+$card-light-color-error-vertical-line: #E76E5C;
+$card-light-color-error-background: #FCEFEC;
+$card-light-color-error-shadow: #E6E6E6;
+$card-light-color-warning-vertical-line: #F0D49B;
+$card-light-color-warning-background: #FCF5E8;
+$card-light-color-warning-shadow: #E6E6E6;
+$card-light-color-success-vertical-line: #B4DEA4;
+$card-light-color-success-background: #EDF8E9;
+$card-light-color-success-shadow: #E6E6E6;
+$card-light-color-info-vertical-line: #AAD1EC;
+$card-light-color-info-background: #EBF4FB;
+$card-light-color-info-shadow: #E6E6E6;
+$card-dark-color-error-vertical-line: #E76E5C;
+$card-dark-color-error-background: #832112;
+$card-dark-color-error-shadow: #4D4D4D;
+$card-dark-color-warning-vertical-line: #DFA739;
+$card-dark-color-warning-background: #7D5504;
+$card-dark-color-warning-shadow: #4D4D4D;
+$card-dark-color-success-vertical-line: #6FBA53;
+$card-dark-color-success-background: #276211;
+$card-dark-color-success-shadow: #4D4D4D;
+$card-dark-color-info-vertical-line: #57A4D7;
+$card-dark-color-info-background: #114E77;
+$card-dark-color-info-shadow: #4D4D4D;
+$card-size-vertical-line: 4px;
 $checkbox-light-color-border: #B3B3B3;
 $checkbox-light-color-states-checked-border: #206EA2;
 $checkbox-light-color-states-checked-background: #338FCC;
